--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "bcryptjs": "2.4.3",
+    "formik": "2.4.5",
     "next": "14.0.4",
     "prisma": "^5.7.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
