--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@reduxjs/toolkit": "2.2.1",
     "bcryptjs": "2.4.3",
     "formik": "2.4.5",
     "next": "14.0.4",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "9.1.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
