--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "2.2.1",
+    "axios": "^1.6.7",
     "bcryptjs": "2.4.3",
     "formik": "2.4.5",
     "next": "14.0.4",
