--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "9.1.0",
+    "stripe": "14.19.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
