--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-redux": "9.1.0",
     "stripe": "14.19.0",
-    "zod": "3.22.4"
+    "zod": "3.22.4",
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
